fixed ip to HEC server

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-playing with docker-compose for splunk
+playing around with docker-compose for splunk
 Containers include enterprise, universalforwarders, nginx
 automated HTTP Event Collector
+
